@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-11T08:11:27Z",
-  "count_outdated" : 55,
-  "uniques_outdated" : 41,
+  "timestamp" : "2023-08-14T00:42:30Z",
+  "count_outdated" : 56,
+  "uniques_outdated" : 42,
   "count" : 57,
   "uniques" : 43,
   "clones" : [
-    {
-      "timestamp": "2023-07-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-09T00:00:00Z",
       "count": 1,
