@@ -1,12 +1,7 @@
 {
-  "count": 2,
+  "count": 1,
   "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2023-07-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-08-09T00:00:00Z",
       "count": 1,
